2012-06-27  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/sagittarius/interactive/support.scm: added interactive support
	library.

	* boot/lib/repl.scm: added initialise file loading.

2012-06-24  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/srfi/%3a1/lists.scm (delete-duplicates): fixed infinite loop.

	* src/vmcall.c (closure call): modified to set unspecified value as
	default return value. (Issue 18)

2012-06-19  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/net/oauth/consumer.scm (get-problem-report): fixed returning
	#f and caused assertion-violation.

2012-06-14  Takashi Kato  <ktakashi@ymail.com>

	* src/bytevector.c (Sg_ByteVectorToInteger): improved
	bytevector->integer performance.

2012-06-12  Takashi Kato  <ktakashi@ymail.com>

	* src/null.stub (get-string-all): Fixed to read all string. Enbuged
	when I added to buffer reader for string port.

2012-06-11  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rfc/x.509.scm (rfc): fixed typo.

2012-06-07  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/text/csv.scm (text): fixed multiple line comments reading.

2012-06-01  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm (and-let*): modified to rewrite initial expression
	to avoid unbound variable exception after macro expansion.

2012-05-30  Takashi Kato  <ktakashi@ymail.com>

	* src/port.c (file_look_ahead_u8): Fixed when EOF is read buffer index
	was decreased and it causes infinite loop with combination of get-u8.

2012-05-26  Takashi Kato  <ktakashi@ymail.com>

	* src/reader.c (read_hash_equal): fixed SEGV when reading #= with
	read or get-datum.

2012-05-18  Takashi Kato  <ktakashi@ymail.com>

	* src/unicode.c (utf8_reader): fixed utf8 treatment.

	* src/reader.c (read_symbol_or_number): modified lexical syntax check in
	R6RS mode not to raise io error when the first letter was geater than
	0x7F.
	(readtable): introduced CT_ILLEGAL to handle illegal control characters.

2012-05-14  Takashi Kato  <ktakashi@ymail.com>
